# allele-specific-methylation

./: .gitignore  pyproject.toml
docs/: notes.md
notebooks/: merge_vcfs.ipynb  vcf.ipynb
src/: constants.py  pyproject.toml  workflow.py
src/allele_specific_methylation/: constants.py  parse.py  workflow.py
src/allele_specific_methylation/bioapps/: classes.py  config.py
src/allele_specific_methylation/cli/: cli.py
src/allele_specific_methylation/methylation/: annotate.py  classes.py
src/allele_specific_methylation/vcf_processing/: classes.py  parse.py  preprocessing.py  utils.py
src/allele_specific_methylation/visualizations/: interactive.py
src/cli/: cli.py
src/methylation/: classes.py  utils.py
src/vcf_processing/: classes.py  models.py  parse.py  preprocessing.py  utils.py
