[project]
name = "jones-lab"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "bcbio-gff>=0.7.1",
    "biopython>=1.85",
    "black>=25.1.0",
    "dna-features-viewer>=3.1.3",
    "ipykernel>=6.29.5",
    "jupyter>=1.1.1",
    "numpy>=2.2.4",
    "pandas>=2.2.3",
    "plotly>=6.0.1",
    "plotnine>=0.14.5",
    "polars>=1.22.0",
    "pyarrow>=19.0.1",
    "pysam>=0.23.0",
    "scipy>=1.15.2",
]

[dependency-groups]
dev = [
    "black>=25.1.0",
]
