[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "allele-specific-methylation"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "biopython>=1.85",
    "click>=8.2.1",
    "hatchling>=1.27.0",
    "numpy>=2.2.4",
    "pandas>=2.2.3",
    "plotly>=6.0.1",
    "plotnine>=0.14.5",
    "polars>=1.22.0",
    "pyarrow>=19.0.1",
    "pybedtools>=0.12.0",
    "pysam>=0.23.3",
    "pyyaml>=6.0.2",
    "scipy>=1.15.2",
    "setuptools>=75.8.0",
    "statsmodels>=0.14.4",
]

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
    "jupyter>=1.1.1",
    "ruff>=0.12.0",
    "whatshap>=2.8",
]

[project.scripts]
asm = "allele_specific_methylation.cli.cli:asm"

[tool.ruff]
# Set the maximum line length to 79.
line-length = 120

[tool.ruff.lint]
select = ["ALL"]
extend-ignore = [
    "ANN204",   # Do not require return type from __init__
    "ANN401",   # Allow dynamically typed return types
    "D203",     # Do not separate the docstring from the class definition
    "D213",     # Multi-line docstring summary should start at the first line
    "D400",     # First line doesn't need to end with a period
    "D415",     # First line doesn't need punctuation at the end
    "RET504",   # Allow assignment of variable right before returning from function
    "PLR0913",  # Do not require a maximum number of expressions in a list comprehension
    "PTH107",   # Do not suggest that `os.remove` be replaced by `Path.unlink`
    "PTH123",   # Do not suggest that `with open` be replaced by `Path.open`
    "SIM108",   # Do not replace simple if-else statements with ternary expressions for easy of reading
    "SIM115",   # Do not always require use of a context manager
    "S603",     # Subprocess execution check for safety
    "TRY002",   # Do not suggest that a specific Exception type be made
    "TRY003",   # Do not suggest limit to exception message length
]

[tool.hatch.build.targets.wheel]
packages = ["src/allele_specific_methylation"]

[tool.hatch.build.targets.sdist]
packages = ["src/allele_specific_methylation"]
