[project]
name = "src"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "click>=8.1.8",
    "polars>=1.21.0",
    "pydantic>=2.10.6",
]

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
    "jupyter>=1.1.1",
    "ruff>=0.11.11",
]

[tool.ruff]
# Set the maximum line length to 79.
line-length = 120

[tool.ruff.lint]
select = ["ALL"]
extend-ignore = [
    "ANN204",   # Do not require return type from __init__
    "ANN401",   # Allow dynamically typed return types
    "D203",     # Do not separate the docstring from the class definition
    "D213",     # Multi-line docstring summary should start at the first line
    "D400",     # First line doesn't need to end with a period
    "D415",     # First line doesn't need punctuation at the end
    "PLR0913",  # Do not require a maximum number of expressions in a list comprehension
    "SIM108",   # Do not replace simple if-else statements with ternary expressions for easy of reading
]
